# skillane-llm-course

./: .gitignore  01_basic_llm_calling.ipynb  02_basic_rag.ipynb  03_rag_vectordb.ipynb  04_Document_retrieval.ipynb  05_agent.ipynb  pixi.toml  pyproject.toml
